--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -31,6 +31,7 @@ Fonts are separated by a & */
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
+  background-color: #c0c8cc;
   max-width: 960px;
   margin: 0 auto;
   padding: 4em;
@@ -55,6 +56,7 @@ hr {
   background: var(--accent1-color);
 }
 header {
+ background-color:#55beb2 ; 
   padding: 1em;
   text-align: center;
   color: var(--headline-color-on-color);
@@ -108,6 +110,7 @@ nav  {
   display: flex;
 }
 nav a {
+  /* background-color: #2adc7a; */
   padding:1em;
   min-width: 120px;
   text-decoration: none;
@@ -117,6 +120,7 @@ nav a:link, nav a:visited {
   color: var(--nav-link-color);
 }
 nav a:hover {
+  background-color: #2adc7a;
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
 }
@@ -162,4 +166,48 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+
+#background {
+  height: 725px;
+}
+
+.logo{
+  width: 80px;
+}
+
+.icon{
+  width: 80px;
+}
+
+#hero-img{
+  width: 100%;
+}
+footer{
+  background-color: #2adc7a;
+}
+footer a{
+  text-decoration: none;
+  color: #5c57bc;
+}
+footer a:hover{
+  color: #0e026b;
+}
+
+.join{
+  text-decoration: none;
+  color: #554fbc;
+}
+
+.book{
+  text-decoration: none;
+  color: #271fc5;
+
+}
+.book:hover{
+  color: #271fc5;
+
+}
+.join:hover{
+  color: #0c0673;
 }
