--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -10,6 +10,7 @@
   font-size: 2em;
   font-family: Roboto, Helvetica, sans-serif;
   margin-top: 10px;
+  color: white;
 }
 
 .home-grid {
@@ -78,7 +79,7 @@ main section {
 }
 
 footer {
-  background-color: #2adc7a;
+  background-color: #33e282;
   padding: 25px 50px;
   margin-top: 200px;
   display: flex;
@@ -95,9 +96,10 @@ footer a:hover {
 
 nav a {
   text-decoration: none;
-  color: #03011c;
+  color: #fbfbff;
   padding: 35px;
   text-align: center;
+  /* background-color: darkblue; */
 }
 
 .join {
@@ -161,8 +163,8 @@ main section img {
 }
 
 .book {
-  text-decoration: none;
-  color: #271fc5;
+  text-decoration: underline;
+  color: #f6f6f8;
   font-size: 18px;
   padding: 15px 30px;
   margin-top: 50px;
@@ -188,7 +190,7 @@ h2 {
 }
 header {
   display: grid;
-  background-color: rgba(20, 30, 13, 0.7);
+  background-color: rgba(119, 121, 117, 0.7);
   grid-template-columns: 150px auto;
 }
 nav a:hover {
@@ -203,6 +205,84 @@ nav {
   opacity: .6;
   transform: scale(1.1);
 }
+
+.contactus{
+  text-align: center;
+}
+
+
+  form {
+    display: inline-block;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #fcfafa;
+    border-radius: 2em;
+    /* text-align: center; */
+  }
+  
+  p + p {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    min-width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, text areas have a monospace font */
+    font: 1em sans-serif;
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+    /* Match form field borders */
+    border: 1px solid #999;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Set the outline width and style */
+    outline-style: solid;
+    /* To give a little highlight on active elements */
+    outline-color: #000;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+  }
+  
+#feedback {
+  background-color: antiquewhite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: .5em;
+  /* make this element invisible until we are ready for it */
+  display: none;      
+}
+.moveDown {
+  margin-top: 3em;
+}
+
 
 @media screen and (max-width: 900px) {
   #hero, .home-grid {
