--- a/final-project/styles/site-plan.css
+++ b/final-project/styles/site-plan.css
@@ -31,8 +31,9 @@ Fonts are separated by a | */
 
 body {
   max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 4em;
+  /* padding: 4em; */
   font-size: 18px;
   text-align: center;
 }
@@ -104,6 +105,8 @@ nav {
   line-height: 3em;
   text-align: center;
   font-size: 1.2em;
+  border: 1px rgb(12, 12, 12) solid;
+  border-right: 1px rgb(12, 12, 12) solid;
 }
 nav  {
   list-style-type: none;
@@ -178,6 +181,45 @@ footer{
   background-color: #710627 ;
 }
 
-*{
-  border: 1px rgb(12, 12, 12) solid;
+.logo{
+ width: 80px;
+ margin: 0 0 0 auto;
 }
+
+
+/* *{
+  border: 1px rgb(12, 12, 12) solid;
+  } */
+
+  /* this is all the css for the home page */
+.homie{
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+}
+
+.activities{
+ grid-column: 1/2;
+ grid-row: 1/2;
+}
+
+.triathlons{
+grid-column: 2/3;
+grid-row: 1/2;
+}
+
+p, h3{
+  grid-column: 1/3;
+}
+
+.deep-side{
+grid-column: 2/3;
+}
+
+.fun-side{
+grid-column: 1/2;
+grid-row: 4/5;
+}
+
+
+
+
