--- a/final-project/styles/site-plan.css
+++ b/final-project/styles/site-plan.css
@@ -31,11 +31,12 @@ Fonts are separated by a | */
 
 body {
   max-width: 1200px;
-  max-width: 100%;
+  /* max-width: 100%; */
   margin: 0 auto;
   /* padding: 4em; */
   font-size: 18px;
   text-align: center;
+  background-color: #060606;
 }
 img {
   display: block;
@@ -215,6 +216,9 @@ p, h3{
   grid-column: 1/3;
 }
 
+p{
+  color: white;
+}
 .deep-side{
 grid-column: 2/3;
 }
